# doc_extractor

./: .env  .gitignore  README.md  app.py  archive.py  classifier.py  main.py  parser.py  preprocessor.py  pyproject.toml  reader.py  schema.py  scorer.py  test_scorer.py  utils.py
archive/: records.csv
